--- a/config/west.yml
+++ b/config/west.yml
@@ -5,6 +5,7 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
+      revision: v0.2
       revision: main
       import: app/west.yml
   self:
